<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/thumbnailIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/product_picture"
            android:padding="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/thumbnailIV"
            android:orientation="vertical">

            <include
                android:id="@+id/normalDeliveryCV"
                layout="@layout/normal_delivery" />

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_product_title"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_product_price"
                    android:textColor="@color/gray80"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/percentTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/example_product_percent"
                    android:textColor="@color/greenLightML" />

            </LinearLayout>

            <TextView
                android:id="@+id/infoSellerTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_product_seller_by" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>